# RAINBOHz

./: README.md
audio-rendering/: .gitignore  CMakeLists.txt  Doxyfile
audio-rendering/include/: AudioHelpers.h  AudioTypes.h  MultiPartialGenerator.h  MultiPaxelGenerator.h  PartialGenerator.h  PaxelGenerator.h  SineWaveGenerator.h  WavWriter.h  audio_helpers.h  audio_types.h  envelope_types.h  multi_partial_generator.h  multi_paxel_generator.h  parser_audio_fragment.h  partial_generator.h  paxel_generator.h  paxel_types.h  physical_envelope_generator.h  sine_wave_generator.h  wav_writer.h  yaml_keys.h
audio-rendering/src/: MultiPartialGenerator.cpp  MultiPaxelGenerator.cpp  PartialGenerator.cpp  PaxelGenerator.cpp  SineWaveGenerator.cpp  WavWriter.cpp  main.cpp  multi_partial_generator.cpp  multi_paxel_generator.cpp  parser_audio_fragment.cpp  partial_generator.cpp  paxel_generator.cpp  physical_envelope_generator.cpp  sine_wave_generator.cpp  wav_writer.cpp
audio-rendering/tests/: testMultiPartialGenerator.cpp  testPartialGenerator.cpp  testSineWaveGenerator.cpp  test_audio_helpers.cpp  test_complex_audio_fragments.cpp  test_multi_partial_generator.cpp  test_parser_audio_fragment.cpp  test_partial_generator.cpp  test_paxel_generator.cpp  test_physical_envelope_generator.cpp  test_sine_wave_generator.cpp
audio-rendering/tests/test_data/: audio_fragment_1.yaml  three_stage_envelope.yaml  two_partials.yaml  two_partials_variant.yaml
hzl-language/: .gitignore
hzl-language/src/compiler/: compiler_common.py  harmonic_series_compiler.py  scale_compiler.py  virtual_partial_state_set_compiler.py
hzl-language/tests/test_data/: audio_fragment_example.yaml
hzl-language/tests/test_data/harmonic_series/: harmonic_series_1.yaml
hzl-language/tests/test_data/partial_state_set/: partial_state_set_1.yaml  partial_state_set_2.yaml
hzl-language/tests/test_data/partial_state_set_transformation/: partial_state_set_transformation_1.yaml
hzl-language/tests/test_data/scale/: scale_1.yaml
hzl-language/tests/test_data/virtual_partial_state_set/: virtual_partial_state_set_1.yaml
hzl-language/tests/test_output/: CompiledPartialStateSet.yaml
